# WebRTC

./: .gitignore  CMakeLists.txt  README.md
sdl2/: CMakeLists.txt
server/: index.html  index.js
src/: WebRTCSignal.cpp  WebRTCSignal.h  main.cpp  socketio.cpp
